#Fixed (a) dates in email notifications to be site's local time instead of UTC, (b) Corrected recent fix about category menu item persistent/initial filters that made persistent/initial filters visible despite configuration, (c) Further improved fcpagenav pluging to display a disabled next/previous button instead of hiding it

--- a/components/com_flexicontent/assets/css/flexicontent.css
+++ b/components/com_flexicontent/assets/css/flexicontent.css
@@ -276,6 +276,15 @@ fieldset.fc_filter_set {
 	margin-top: 0px;
 }
 
+.fc_range {
+	background: url("../images/arrow_double.png") no-repeat scroll 0 3px transparent !important;
+	width: 16px !important;
+	height: 16px !important;
+	border: 0px solid !important;
+	padding: 0px !important;
+	margin: 0px !important;
+	display: inline-block !important;
+}
 
 
 /*******************/
@@ -334,8 +343,15 @@ fieldset.fc_filter_set {
 	white-space: nowrap;
 	border: 0px dashed gray;
 }
-#flexicontent .filter { clear: none; min-height: 4em; margin: 0px 10px 6px 0px; }
-#flexicontent .filter_line { clear: both; width: 99%; margin: 0px 0px 2px 0px;}
+#flexicontent .filter {
+	clear: none;
+	margin: 0px 10px 6px 0px;
+}
+#flexicontent .filter_line {
+	clear: both;
+	margin: 0px 0px 2px 0px;
+	width: 99%;
+}
 
 /* Container of each individual field filter LABEL */
 #flexicontent .filter .filter_label,
